# monzo-cli

./: .gitignore  Cargo.toml
src/: main.rs
src/endpoints/: account.rs  balance.rs
src/types/: auth.rs  mod.rs  monzo.rs
src/utils/: auth.rs  get_request.rs  mod.rs
